--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="color-scheme" content="dark light">
     <link rel="icon" href="./images/favicon.ico">
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png">
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/variables.css">
@@ -50,64 +51,64 @@
     </header>
     <main class="main">
       <section class="section">
-        <h2 class="section_title">Почему сосредоточиться так сложно</h2>
+        <h2 class="section_title text_style">Почему сосредоточиться так сложно</h2>
         <div class="article_list">
         <article class="section_item">
-          <h3 class="section_item_title">Многозадачность</h3>
-          <p class="section_item_text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="link_text" href="https://dana.org/article/multicosts-of-multitasking/">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+          <h3 class="section_item_title text_style">Многозадачность</h3>
+          <p class="section_item_text text_style">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a class="link_text" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
         </article>
-        <article class="section_item">
-          <h3 class="section_item_title">Дофамин</h3>
-          <p class="section_item_text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+        <article class="section_item text_style">
+          <h3 class="section_item_title text_style">Дофамин</h3>
+          <p class="section_item_text text_style">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
         </article>
       </div>
       </section>
       <section class="section">
-        <h2 class="section_title">Что снижает концентрацию внимания?</h2>
+        <h2 class="section_title text_style">Что снижает концентрацию внимания?</h2>
         <div class="article_list">
-        <article class="section_item">
-          <h3 class="section_item_title">Многозадачность</h3>
-          <p class="section_item_text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+        <article class="section_item ">
+          <h3 class="section_item_title text_style">Многозадачность</h3>
+          <p class="section_item_text text_style">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
         </article>
         <article class="section_item">
-          <h3 class="section_item_title">Еда</h3>
+          <h3 class="section_item_title text_style">Еда</h3>
           <p class="section_item_text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
         </article>
         <article class="section_item">
-          <h3 class="section_item_title">Гаджеты</h3>
-          <p class="section_item_text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+          <h3 class="section_item_title text_style">Гаджеты</h3>
+          <p class="section_item_text text_style">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
         </article>
       </div>
       </section>
       <section class="section">
-        <h2 class="section_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <h2 class="section_title text_style">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <div class="article_list">
-          <h3 class="list_title">5 простых (на самом деле не очень) советов</h3>
+          <h3 class="list_title text_style">5 простых (на самом деле не очень) советов</h3>
         <article class="section_item">
-          <h3 class="section_list_title">Представьте небо и облака</h3>
-          <p class="section_item_text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+          <h4 class="section_list_title text_style">Представьте небо и облака</h4>
+          <p class="section_item_text text_style">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
         </article>
         <article class="section_item">
-          <h3 class="section_list_title">Включите музыку</h3>
-          <p class="section_item_text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
+          <h4 class="section_list_title text_style">Включите музыку</h4>
+          <p class="section_item_text text_style">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
         </article>
         <article class="section_item">
-          <h3 class="section_list_title">Прогуляйтесь</h3>
-          <p class="section_item_text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link_text" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"> показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+          <h4 class="section_list_title text_style">Прогуляйтесь</h4>
+          <p class="section_item_text text_style">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link_text" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank"> показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
         </article>
         <article class="section_item">
-          <h3 class="section_list_title">Хорошо ешьте</h3>
-          <p class="section_item_text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+          <h4 class="section_list_title text_style">Хорошо ешьте</h4>
+          <p class="section_item_text text_style">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
         </article>
         <article class="section_item">
-          <h3 class="section_list_title">Читайте</h3>
-          <p class="section_item_text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+          <h4 class="section_list_title text_style">Читайте</h4>
+          <p class="section_item_text text_style">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
         </article>
       </div>
       </section>
       <section class="section">
-        <h2 class="section_item_title">А можно в картинках?</h2>
-        <div class="section_w_images">
+        <h2 class="section_item_title text_style">А можно в картинках?</h2>
+        <div class="section_with_images">
           <img class="section__image"
           src="./images/sunset.png"
           alt="Горы и закат"
