--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </article>
         <article class="section_item">
           <h3 class="section_item_title text_style">Еда</h3>
-          <p class="section_item_text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
+          <p class="section_item_text text_style">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
         </article>
         <article class="section_item">
           <h3 class="section_item_title text_style">Гаджеты</h3>
