--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <span>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</span></p>
     </header>
     <main class="main">
-      <section class="section">
+      <section class="section section_barview">
         <h2 class="section_title text_style">Почему сосредоточиться так сложно</h2>
         <div class="article_list">
         <article class="section_item">
@@ -65,7 +65,7 @@
       </section>
       <section class="section">
         <h2 class="section_title text_style">Что снижает концентрацию внимания?</h2>
-        <div class="article_list">
+        <div class="article_list row_article_list">
         <article class="section_item ">
           <h3 class="section_item_title text_style">Многозадачность</h3>
           <p class="section_item_text text_style">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
@@ -80,7 +80,7 @@
         </article>
       </div>
       </section>
-      <section class="section">
+      <section class="section section_barview">
         <h2 class="section_title text_style">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <div class="article_list">
           <h3 class="list_title text_style">5 простых (на самом деле не очень) советов</h3>
