with_my_comments

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <body class="page">
     <header class="header decorated-zone">
       <div class="decorated__rec"></div>
-      <nav class="header__theme-menu">
+      <div class="header_block">
+        <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
             <button
@@ -44,11 +45,12 @@
             </button>
           </li>
         </ul>
-      </nav>
-      <h1 class="header__name">no focus</h1>
-      <p class="header_desc"><span>Что делать, когда не можешь делать ничего</span>
-        <span>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</span></p>
-    </header>
+        </nav>
+        <h1 class="header__name">no focus</h1>
+        <p class="header_desc"><span>Что делать, когда не можешь делать ничего</span>
+          <span>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</span></p>
+      </div>
+      </header>
     <main class="main">
       <section class="section section_barview">
         <h2 class="section_title text_style">Почему сосредоточиться так сложно</h2>
