--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@
         </div>
       </section>
       <section class="section">
-        <h2 class="section_item_title text_style">А можно в картинках?</h2>
+        <h2 class="section_item_title text_style image_title">
+          А можно в картинках?
+        </h2>
         <div class="section_with_images">
           <img
             class="section__image"
